[gd_scene load_steps=29 format=2]

[ext_resource path="res://content/critters/mushroomman/Shroomer.gd" type="Script" id=1]
[ext_resource path="res://content/critters/mushroomman/pilzmannerl_sheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 12, 9, 12 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 9, 12, 9, 12 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 36, 9, 12 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 9, 36, 9, 12 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 18, 36, 9, 12 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 27, 36, 9, 12 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 9, 12 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 9, 24, 9, 12 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 18, 24, 9, 12 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 27, 24, 9, 12 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 9, 12 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 9, 0, 9, 12 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 9, 12 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 9, 60, 9, 12 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 0, 60, 9, 12 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 9, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 18, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 27, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 36, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 45, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 54, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 63, 48, 9, 12 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 0, 12, 9, 12 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "twinkle",
"speed": 2.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "grow",
"speed": 10.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "shrink",
"speed": 10.0
}, {
"frames": [ SubResource( 50 ), SubResource( 50 ) ],
"loop": true,
"name": "hidden",
"speed": 1.0
} ]

[node name="Shroomer" type="Node2D" groups=["critters_shroomer"]]
z_index = 23
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
frames = SubResource( 25 )
animation = "idle"
frame = 2
playing = true

[node name="Tween" type="Tween" parent="."]

[node name="EdgeDetector" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 4 )

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -6 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 7 )

[node name="GroundDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 4 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
